IAM-1962 Fix double password reveal icon in edge browser
Squashed commit of the following:

commit a62c0713c88aa2e21f722b1774d967c57a125c8a
Merge: dd97ba85c a3ba10abb
Author: Manuel Escobar <manuel.escobar@forgerock.com>
Date:   Tue Apr 5 09:51:26 2022 -0500

    Merge branch 'master' of https://stash.forgerock.org/scm/~manuel.escobar/platform-ui into IAM-1962_Fix-double-reveal-password-icon

commit dd97ba85c22b48e4a39fbbfe37609b2557f99988
Author: Manuel Escobar <manuel.escobar@forgerock.com>
Date:   Thu Mar 31 16:24:31 2022 -0500

    IAM-1962 Fix double password reveal icon in edge browser

--- a/packages/platform-shared/src/scss/main.scss
+++ b/packages/platform-shared/src/scss/main.scss
@@ -25,6 +25,10 @@ body {
   font-family: $fr-typeface;
 }
 
+::-ms-reveal {
+  display: none;
+}
+
 // Missing material design size utilities (not included with outline versions for some reason)
 .material-icons.md-14,
 .material-icons-outlined.md-14 {
